# educator-dashboard

./: .gitignore  Procfile  README.md  dashboard.py  pyproject.toml  requirements.txt
assets/: themes.css
core/: callbacks.py  constants.py  data.py  layouts.py  utils.py
dashboard/: callbacks.py  constants.py  dashboard.py  data.py  layouts.py  populate.py  utils.py
dashboard/assets/: themes.css
dashboard/data/: assignment-survey-data.csv  eval-data.csv
data/: cse-2221-grades.csv  patch-notes.md
logs/: performance-cumtime.txt  performance-tottime.txt
pages/: assessment.py  cse2221.py  cse2231.py  education.py  evaluation.py  evaluations.py  feedback.py  history.py  home.py  patch_notes.py  triangulation.py
viz/: viz.py
viz/assets/: themes.css
viz/data/: au-2021-cse-2221-grades.csv
