[tool.poetry]
name = "the educator dashboard"
version = "1.0.0"
description = "A collection of visualizations related to courses taught by myself, Jeremy Grifski"
authors = ["jrg94 <jeremy.grifski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dash = "^2.3"
plotly = "^5.6"
gunicorn = "20.1"
pandas = "2.1"
statsmodels = "0.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
