[tool.poetry]
name = "the educator dashboard"
version = "1.0.0"
description = "A collection of visualizations related to courses taught by myself, Jeremy Grifski"
authors = ["jrg94 <jeremy.grifski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dash = "^2.14"
plotly = "^5.18"
gunicorn = "^20.1"
pandas = "^2.1"
statsmodels = "^0.14"
selenium = "^4.15.2"
webdriver-manager = "^4.0.1"
nltk = "^3.8.1"
dash-bootstrap-components = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
